@@ -44,8 +44,8 @@
 
 \newcommand{\vmajor}{5}
 \newcommand{\vminor}{3}
-\newcommand{\vpatch}{14}
-\newcommand{\vmonth}{July}
+\newcommand{\vpatch}{17}
+\newcommand{\vmonth}{August}
 \newcommand{\vyear}{2004}
 
 \newcommand{\versionshort}{\vmajor.\vminor}
