@@ -1618,7 +1618,8 @@ and in the following predicates: \predref{=}{2}, \predref{==}{2},
 \predref{\==}{2}, \predref{\=}{2}, \predref{=@=}{2}, \predref{\=@=}{2},
 \predref{@<}{2}, \predref{@=<}{2}, \predref{@>}{2}, \predref{@>=}{2},
 compare/3, \predref{=..}{2}, copy_term/2, duplicate_term/2, write/1,
-dif/2, when/2, term_variables/2, numbervars/[3,4], hash_term/2.
+dif/2, when/2, term_variables/2, numbervars/[3,4], hash_term/2,
+recorda/3, recordz/3, findall/3, bagof/3, setof/3, throw/1.
 
 
 \section{System limits}				\label{sec:limits}
