@@ -1,3 +1,8 @@
+Jul 31, 2004
+
+  * ADDED: converted rdf_nt.pl into public rdf_ntriples.pl library for
+    loading data in the W3C ntriple format.
+
 Jun 29, 2004
 
   * FIXED: sharing code for blank nodes.  Broken in recent cleanup.
